--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,30 +6,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="me.rebi.simplechart.MainActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
-    <me.rebi.simplechartlibrary.PieChart
-        android:id="@+id/pieChart"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        app:titleName="测试"
-        app:animationTime="1000"
-        />
-    <me.rebi.simplechartlibrary.LineChart
-        android:id="@+id/lineChart"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        app:animationTime="2000"
-        />
-    <me.rebi.simplechartlibrary.BarChart
-        android:id="@+id/barChart"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        app:animationTime="3000"
-        />
+        android:orientation="vertical">
+
+        <me.rebi.simplechartlibrary.PieChart
+            android:id="@+id/pieChart"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:visibility="gone"
+            app:animationTime="1000"
+            app:titleName="测试" />
+
+
+        <me.rebi.simplechartlibrary.LineChart
+            android:id="@+id/lineChart"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            app:animationTime="2000" />
+
+
+        <me.rebi.simplechartlibrary.BarChart
+            android:id="@+id/barChart"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            app:animationTime="3000" />
     </LinearLayout>
 
 </ScrollView>
